--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.11.0",
     "prettier": "^1.19.1",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "styled-components": "^4.4.1"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
