--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,8 +8,16 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Build app
+      - name: Setup enviroment
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: yarn install
+      - name: Install dependencies
+        run: yarn install
+      - name: Build app
+        run: yarn run build
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.0.0
+        with:
+          branch: gh-pages
+          folder: build
