--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "motomarket-srl",
   "version": "0.1.0",
-  "homepage": "https://spaghetti-n5.github.io/motomarket-srl",
+  "homepage": "https://motomarketsrl.it",
   "private": true,
   "dependencies": {
     "eslint-config-airbnb": "^18.2.1",
